# nfl_veripy

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt  run_overt.jl  setup.py  train.sh
closed_loop/: ClosedLoopAnalyzer.py  ClosedLoopConstraints.py  ClosedLoopExperiments.py  ClosedLoopPartitioner.py  ClosedLoopPropagator.py  Dynamics.py  example.py  lp.py  mpc.py  nn.py  nn_bounds.py  reach_sdp.ipynb  reach_sdp.py  sim.py  utils.py
closed_loop/analyzers/: ClosedLoopAnalyzer.py  __init__.py
closed_loop/dynamics/: DoubleIntegrator.py  DoubleIntegratorOutputFeedback.py  Dynamics.py  Quadrotor.py  QuadrotorOutputFeedback.py
closed_loop/partitioners/: ClosedLoopNoPartitioner.py  ClosedLoopPartitioner.py  ClosedLoopProbabilisticPartitioner.py  ClosedLoopUniformPartitioner.py
closed_loop/propagators/: ClosedLoopCROWNIBPCodebasePropagator.py  ClosedLoopPropagator.py  ClosedLoopSDPPropagator.py  __init__.py
closed_loop/utils/: nn.py  utils.py
datasets/duffing/: xs.csv
datasets/quadrotor/: xs.pkl
deprecated/: cadrl_torch_model  setup_old.py  train.sh
deprecated/jupyter_notebooks/: LipSDP.ipynb  closed_loop_example.ipynb  partitioner_example.ipynb
deprecated/nn_partition/: experiments.py  setup.py
deprecated/tmp/: tanh.pkl
docker/: Dockerfile
docs/_static/: other.md
jupyter_notebooks/: closed_loop_example.ipynb  partitioner_example.ipynb
matlab_codes/quadrotor_nlmpc/: myStateFunction.m  myStateJacobian.m  quadrotor_nlmpc.m  quadrotor_nlmpc_x.csv
nfl_veripy/: example.py  mypy.ini  setup.py
nfl_veripy/examples/: example.py  example_backward.py  example_cfg.py
nn_closed_loop/: backward_experiments.py  example.py  example_backward.py  example_cfg.py  experiments.py  expts.py  mypy.ini  setup.py
nn_partition/: .gitignore  example.py  setup.py
partition/: Analyzer.py  ConcaveHull.py  Partition.py  Partitioner.py  Propagator.py  backup_parititoner.py  backup_termination_condition.py  dynamics.py  example.py  experiments.py  expt.py  kd_tree.py  models.py  network_utils.py  rl.py  simple_verification_lstm.py  xiang.py  xiang_modified.py
reach_lp/: lp.py  mpc.py  nn.py  nn_bounds.py  reach_lp.py  reach_sdp.ipynb  reach_sdp.py  sim.py  utils.py
tests/: test.py  test_constraints.py
(+576 files in other folders)
