[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nfl_veripy"
version = "0.0.2"
authors = [
    { name = "Michael Everett", email = "m.everett@northeastern.edu" },
    { name = "Nicholas Rober", email = "nrober@mit.edu" },
]
description = "Formal verification of neural feedback loops (NFLs)"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
license = { file = "LICENSE" }
dependencies = [
    "torch",
    "matplotlib",
    "pandas",
    "tabulate",
    "colour",
    "jax",
    "jax_verify",
    "crown_ibp",
    "auto_LiRPA",
    "parameterized",
    "pypoman",
    "alphashape",
    "scikit-learn",
    "scipy",
    "imageio",
    "tqdm",
    "pyclipper",
    "pygifsicle",
    "mypy",
    "pylint",
]

[project.urls]
repository = "https://github.com/neu-autonomy/nfl_veripy.git"

[tool.hatch.build]
exclude = ["/third_party", "/deprecated", "/docker", "/docs"]

# TODO: add an option that includes some model files/datasets?
